--- a/Angular/proyectoFinal/src/app/paginas/student-soft-skill-evaluation/student-soft-skill-evaluation.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-soft-skill-evaluation/student-soft-skill-evaluation.component.html
@@ -17,7 +17,7 @@
         </div>
         <div>
           <label for="points">Puntos:</label>
-          <input type="number" id="points" formControlName="points" min="0" max="50" />
+          <input type="number" id="points" formControlName="points" min="0"/>
         </div>
         <div *ngIf="evaluationForm.get('points')?.errors?.['pointsExceeded']">
           No puedes asignar más puntos de los que tienes disponibles.
